src/elements/notification/notification.scss
@use '../core/styles' as sbb;

// Open/Close animation vars
$open-anim-margin-from: 0;
$open-anim-margin-to: var(--sbb-notification-margin, 0);
$open-anim-opacity-from: 0;
$open-anim-opacity-to: 1;
$open-anim-height-from: 0;
$open-anim-height-to: calc(
  var(--sbb-notification-height) + (var(--sbb-notification-border-width) * 2)
);

:host {
  --sbb-notification-border: var(--sbb-notification-border-width) solid
    var(--sbb-notification-type-color);
  --sbb-notification-background-color: light-dark(
    color-mix(in srgb, var(--sbb-notification-type-color) 5%, white),
    color-mix(in srgb, var(--sbb-notification-type-color) 35%, white)
  );
  --sbb-notification-icon-color: var(--sbb-notification-type-color);
  --sbb-notification-border-radius-start: calc(var(--sbb-notification-base-border-radius) / 2);
  --sbb-notification-animation-duration: var(
    --sbb-disable-animation-duration,
    var(--sbb-animation-duration-4x)
  );
  --_sbb-notification-icon-authoritative-font-size: 1em;
  --_sbb-notification-icon-authoritative-line-height: var(--sbb-typo-line-height-text);
  --_sbb-notification-inset-inline-start: calc(
    var(--sbb-notification-base-border-radius) - var(--sbb-notification-border-width)
  );

  // As the notification has always a light background, we have to fix the focus outline color
  // to default color for cases where the notification is used in a negative context.
  --sbb-focus-outline-color: var(--sbb-focus-outline-color-default);

  display: block;
  letter-spacing: var(--sbb-typo-letter-spacing-text);
  font-size: var(--sbb-notification-font-size);
}

// By default, the open animation is disabled
:host(:state(state-opening):not([animation='open'], [animation='all'])) {
  @include sbb.disable-animation;
}

:host(:state(state-closing):not([animation='close'], [animation='all'])) {
  @include sbb.disable-animation;
}

:host(:state(resize-disable-animation)) {
  @include sbb.disable-animation;
}

:host(:state(slotted-title)) {
  --_sbb-notification-icon-authoritative-font-size: var(--sbb-heading-font-size-5);
  --_sbb-notification-icon-authoritative-line-height: var(--sbb-typo-line-height-heading);
}

:host(:state(slotted-title)[size='s']) {
  --_sbb-notification-icon-authoritative-font-size: var(--sbb-heading-font-size-6);
  --_sbb-notification-icon-authoritative-line-height: var(--sbb-typo-line-height-text);
}

:host([size='m']) {
  --sbb-notification-font-size: var(--sbb-text-font-size-s);
  --sbb-notification-padding-block: var(--sbb-spacing-responsive-xxs);
  --sbb-notification-padding-inline: var(--sbb-spacing-responsive-xs);
  --sbb-notification-content-padding-inline: var(--sbb-spacing-responsive-xxxs)
    var(--sbb-spacing-responsive-xs);
}

:host([size='s']) {
  --sbb-notification-font-size: var(--sbb-text-font-size-xs);
  --sbb-notification-padding-block: var(--sbb-spacing-responsive-xxxs);
  --sbb-notification-padding-inline: var(--sbb-spacing-responsive-xxs)
    var(--sbb-spacing-responsive-xxxs);
  --sbb-notification-content-padding-inline: var(--sbb-spacing-responsive-xxxs)
    var(--sbb-spacing-responsive-xxs);

  @include sbb.mq($from: small) {
    --sbb-notification-padding-inline: var(--sbb-spacing-responsive-xxs);
  }
}

// Types
:host(:is(:not([type]), [type='info'])) {
  --sbb-notification-type-color: var(--sbb-color-smoke);
  --sbb-notification-icon-color: var(--sbb-notification-color);
  --sbb-notification-divider-opacity-light: 20%;
  --sbb-notification-divider-opacity-dark: 20%;
}

:host([type='note']) {
  --sbb-notification-type-color: var(--sbb-color-sky);
  --sbb-notification-divider-opacity-light: 20%;
  --sbb-notification-divider-opacity-dark: 20%;
}

:host([type='success']) {
  --sbb-notification-type-color: var(--sbb-color-success);
  --sbb-notification-divider-opacity-light: 15%;
  --sbb-notification-divider-opacity-dark: 30%;
}

:host([type='warn']) {
  --sbb-notification-type-color: var(--sbb-color-warning);
  --sbb-notification-icon-color: var(--sbb-notification-color);
  --sbb-notification-divider-opacity-light: 25%;
  --sbb-notification-divider-opacity-dark: 40%;
}

:host([type='error']) {
  --sbb-notification-type-color: var(--sbb-color-error);
  --sbb-notification-divider-opacity-light: 10%;
  --sbb-notification-divider-opacity-dark: 25%;
}

.sbb-notification__wrapper {
  position: relative;
  inset-inline-start: var(--_sbb-notification-inset-inline-start);
  width: calc(100% - var(--_sbb-notification-inset-inline-start));
  border: var(--sbb-notification-border);
  border-radius: var(--sbb-notification-border-radius-start)
    var(--sbb-notification-base-border-radius) var(--sbb-notification-base-border-radius)
    var(--sbb-notification-border-radius-start);
  opacity: #{$open-anim-opacity-from};
  max-height: #{$open-anim-height-from};
  margin: #{$open-anim-margin-from};

  &::before {
    content: '';
    position: absolute;
    inset: calc(var(--sbb-notification-border-width) * -1)
      var(--sbb-notification-base-border-radius) calc(var(--sbb-notification-border-width) * -1)
      calc(var(--sbb-notification-base-border-radius) * -1);
    background-color: var(--sbb-notification-type-color);
    border: var(--sbb-notification-border);
    border-radius: var(--sbb-notification-base-border-radius);
  }

  :host(:is(:state(state-opened), :state(state-closing))) & {
    opacity: #{$open-anim-opacity-to};
    max-height: #{$open-anim-height-to};
    margin: #{$open-anim-margin-to};
  }

  :host(:state(state-opening)) & {
    animation: {
      name: open;
      fill-mode: forwards;
      duration: var(--sbb-notification-animation-duration);
      timing-function: var(--sbb-notification-timing-function);
    }
  }

  :host(:state(state-closing)) & {
    animation: {
      name: close, close-height;
      fill-mode: forwards;
      duration: var(--sbb-notification-animation-duration);
      timing-function: var(--sbb-notification-timing-function);
      delay: 0s, var(--sbb-disable-animation-duration, var(--sbb-animation-duration-2x));
    }
  }
}

.sbb-notification {
  position: relative;
  display: grid;
  grid-template-columns: 1fr auto;
  align-items: center;
  padding-block: var(--sbb-notification-padding-block);
  padding-inline: var(--sbb-notification-padding-inline);
  color: var(--sbb-notification-color);
  border-radius: var(--sbb-notification-border-radius-start)
    calc(var(--sbb-notification-base-border-radius) - var(--sbb-notification-border-width))
    calc(var(--sbb-notification-base-border-radius) - var(--sbb-notification-border-width))
    var(--sbb-notification-border-radius-start);
  overflow: hidden;
  background-color: var(--sbb-notification-background-color);

  @include sbb.mq($from: small) {
    grid-template-columns: auto 1fr auto auto;
  }
}

.sbb-notification__icon,
::slotted(sbb-icon) {
  color: var(--sbb-notification-icon-color);
  align-self: var(--sbb-notification-icon-align-self);

  // This is an undocumented feature for sbb.ch, to have the ability to hide the icon.
  --sbb-icon-svg-width: var(--sbb-notification-icon-size);

  @include sbb.mq($from: small) {
    margin-block-start: max(
      0rem,
      calc(
        (
            (
                var(--_sbb-notification-icon-authoritative-font-size) *
                  var(--_sbb-notification-icon-authoritative-line-height)
              ) - var(--sbb-size-icon-ui-small)
          ) /
          2
      )
    );
  }
}

.sbb-notification__content {
  // The content of the notification is always displayed in positive mode,
  // therefore, to have slotted content correctly display, we need only allow light mode.
  color-scheme: only light;
  order: 3;
  grid-area: 2 / 1 / 3 / 3;
  margin-block-start: var(--sbb-notification-content-margin-block-start);

  @include sbb.mq($from: small) {
    order: initial;
    grid-area: initial;
    margin-block-start: 0;
    padding-inline: var(--sbb-notification-content-padding-inline);
  }
}

.sbb-notification__text {
  // Reset paragraph styles
  display: inline;
  margin: 0;
  padding: 0;
}

.sbb-notification__divider {
  --sbb-divider-color: light-dark(
    color-mix(
      in srgb,
      var(--sbb-notification-type-color) var(--sbb-notification-divider-opacity-light),
      var(--sbb-notification-background-color)
    ),
    color-mix(
      in srgb,
      var(--sbb-notification-type-color) var(--sbb-notification-divider-opacity-dark),
      var(--sbb-notification-background-color)
    )
  );

  display: none;
  position: relative;
  inset-inline-start: var(--sbb-border-width-1x);

  @include sbb.mq($from: small) {
    display: block;
    margin-inline-end: var(--sbb-notification-close-wrapper-gap);
    height: calc(100% - (var(--sbb-spacing-fixed-1x) * 2));
  }
}

@keyframes open {
  from {
    opacity: #{$open-anim-opacity-from};
    max-height: #{$open-anim-height-from};
    margin: #{$open-anim-margin-from};
  }

  to {
    opacity: #{$open-anim-opacity-to};
    max-height: #{$open-anim-height-to};
    margin: #{$open-anim-margin-to};
  }
}

@keyframes close {
  from {
    opacity: #{$open-anim-opacity-to};
    margin: #{$open-anim-margin-to};
  }

  to {
    opacity: #{$open-anim-opacity-from};
    margin: #{$open-anim-margin-from};
  }
}

@keyframes close-height {
  from {
    max-height: #{$open-anim-height-to};
  }

  to {
    max-height: #{$open-anim-height-from};
  }
}

::slotted(sbb-title) {
  // Overwrite sbb-title default margin
  margin: 0;
}

